--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ body {
 .padding-inherit {
   padding: inherit!important;
 }
+.Album {
+  transition: all 2s ease-in-out;
+}
+
+.Album:hover {
+  transition: all 2s ease-in-out;
+  transform: scale(1.05);
+}
